@startuml

title __PLATEAU's Class Diagram__\n

  namespace  {
    namespace lateau {
      class plateau.CasePlateau {
          - estOccupeeProfondeur : boolean
          - estOccupeeSurface : boolean
          + CasePlateau()
          + addUnOccupant()
          + getOccupantProfondeur()
          + getOccupantSurface()
          + isEstOccupeeProfondeur()
          + isEstOccupeeSurface()
          + removeUnOccupant()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace lateau {
      class plateau.Plateau {
          - matricePlateau : CasePlateau[][]
          - taille : int
          + Plateau()
          + affiche()
          + getCasePlateau()
          + getMyTaille()
          + nombreBateauPlateau()
          + toString()
      }
    }
  }
  

  plateau.CasePlateau o-- navire.Navire : occupant
  plateau.CasePlateau o-- navire.NavireProfondeur : sousmarin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
